$Id: History,v 1.104 2002-11-20 13:08:43 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 20, 2002 G.Cosmo (global-V04-01-02)
- G4UnitsTable[.hh.cc]: made GetUnitsTable static method non inlined.
- G4Integrator[.icc]: plugged minor memory leak.

August 19, 2002 M.Asai (global-V04-01-01)
- Introducing a new G4Exception scheme.
 Added : G4VStateDependent.hh G4VStateDependent.cc G4ExceptionSeverity.hh
 Modified : G4Exception.cc G4StateManager.hh globals.hh

June 21, 2002 G.Cosmo (global-V04-01-00)
- G4Allocator.hh: changed definition of page size to become data-member of
  G4Allocator. fPageSize is now computed according to the size of the object
  to be allocated. The default size is 1024 bytes for objects whose size is
  less than 512 bytes, 10 times the size of the object otherwise.
  To be benchmarked before put it in production.

May 30, 2002 G.Cosmo (global-V04-00-08)
- G4DataVector.cc: initialise to zero values in collection for contructor
  taking capacity.

May 24, 2002 G.Cosmo (global-V04-00-07)
- Introduced temporary modifications for porting on gcc-3.1 compiler:
  o g4std/strstream: deactivate gcc-3.1 specific __DEPRECATED flag.